--- a/src/AppStyles.css
+++ b/src/AppStyles.css
@@ -1,8 +1,8 @@
 .App {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: rgb(72, 0, 105);
   background: linear-gradient(
     90deg,
@@ -14,7 +14,7 @@
 
 .app-wrapper {
   width: 50%;
-  height: 100%;
+  height: 100vh;
   margin: 0 auto;
   background: rgb(11, 11, 11);
   background: linear-gradient(
