Final commit - Finishing App

--- a/src/AppStyles.css
+++ b/src/AppStyles.css
@@ -14,7 +14,7 @@
 
 .app-wrapper {
   width: 50%;
-  height: 100vh;
+  height: 100%;
   margin: 0 auto;
   background: rgb(11, 11, 11);
   background: linear-gradient(
